# ipv6-updater

./: ChangeLog  Makefile.am  Makefile.in  TODO  configure  configure.in
extra/: ipv6-updater.conf
src/: Makefile.in  conf.c  conf.h  util.c  util.h  util_sys.c  util_sys.h
trunk/: COPYING  Doxyfile  Makefile.in  NEWS  README  config.h.in  configure
trunk/extra/: ipv6-updater.initd
trunk/libmissing/: Makefile.am  Makefile.in  inet_aton.c  inet_ntop.c  inet_pton.c
trunk/src/: Makefile.am  Makefile.in  dbg.c  dbg.h  main.c  os.h  util_sys.c  util_sys.h
