#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.60a)
AC_INIT(ipv6-updater, 0.2.2, [<URL:http://www.cppextrem.com/>])
AC_CONFIG_SRCDIR([src/main.c])
AC_CONFIG_HEADER([config.h])

AM_INIT_AUTOMAKE(ipv6-updater, 0.2.2)

# Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lconfuse':
#AC_CHECK_LIB([confuse], [cfg_init])
AC_CHECK_LIB(confuse, cfg_init,,[echo -e "\tPlease install libconfuse";exit])

AC_CHECK_LIB(rt, clock_gettime,,[echo -e "\tDon't have librt";exit])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h netdb.h netinet/in.h stdint.h stdlib.h string.h sys/socket.h sys/time.h unistd.h confuse.h])

AC_REPLACE_FUNCS(inet_ntop)
AC_REPLACE_FUNCS(inet_aton)
AC_REPLACE_FUNCS(inet_pton)

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T

# Checks for library functions.
AC_FUNC_FORK
#AC_FUNC_MALLOC
AC_FUNC_SELECT_ARGTYPES
AC_FUNC_STRERROR_R
AC_TYPE_SIGNAL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([atexit gettimeofday memset select socket strstr])

AC_CONFIG_FILES(Makefile \
		libmissing/Makefile \
                src/Makefile)
AC_OUTPUT
